test/libsolidity/syntaxTests/globalFunctions/now_deprecate.sol
contract C {
	function f() public {
		now;
	}
}
// ----
// TypeError: (38-41): "now" has been deprecated. Use "block.timestamp" instead.
